[package]
name = "neurostream"
version = "0.1.0"

description = "The neural network library implemented in Rust, now running in parallel"
repository = "https://github.com/Bernardozomer/NeuroStream"
readme = "README.md"
keywords = ["machine-learning", "neural-networks", "data-learning", "math", "backpropagation", "parallelism", "stream-processing"]
categories = ["algorithms", "science"]
license = "MIT"

authors = ["Mikhail Kravets <michkravets@gmail.com>", "Bernardo Zomer <bernardobarzottoz@gmail.com>"]
exclude = ["examples/*", "tests/*"]

[dependencies]
rust-spp = { git = "https://github.com/GMAP/rust-ssp" }
rand = "0.3"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
bincode = "^0.9"
csv = "^1.0.0-beta.5"

[dev-dependencies]
time = "0.1"
